--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <li><a href="#">Home</a></li>
                 <li><a href="pages/learn.html">Learn</a></li>
-                <li><a href="#">Roadmap</a></li>
+                <!-- <li><a href="#">Roadmap</a></li> -->
                 <li>
                     <button id="theme-toggle" aria-label="Switch theme">
                         ☀
@@ -48,8 +48,8 @@
                             fundamentals to deep concepts, where curiosity matters more than speed.
                         </p>
                         <div class="cta-group">
-                            <a href="#" class="btn-primary">Start Learning</a>
-                            <a href="#" class="btn-secondary">Explore Roadmap →</a>
+                            <a href="pages/learn.html" class="btn-primary">Start Learning</a>
+                            <!-- <a href="#" class="btn-secondary">Explore Roadmap →</a> -->
                         </div>
                     </div>
 
@@ -59,10 +59,18 @@
                             <div class="accretion-ring"></div>
 
                             <div class="satellite-orbit">
-                                <div class="sat pos-1">Physics</div>
-                                <div class="sat pos-2">React</div>
-                                <div class="sat pos-3">Calculus</div>
-                                <div class="sat pos-4">Python</div>
+                                <a href="pages/learn.html">
+                                    <div class="sat pos-1">JS</div>
+                                </a>
+                                <a href="pages/learn.html">
+                                    <div class="sat pos-2">React</div>
+                                </a>
+                                <a href="pages/learn.html#Technology">
+                                    <div class="sat pos-3">Technology</div>
+                                </a>
+                                <a href="pages/learn.html">
+                                    <div class="sat pos-4">Css</div>
+                                </a>
                                 <a href="pages/tech/html.html">
                                     <div class="sat pos-5">Html</div>
                                 </a>
@@ -84,63 +92,71 @@
                 <div class="grid-3">
 
                     <div class="learn-card">
-                        <div class="icon-box">
-                            <span>⚛</span>
-                        </div>
-                        <h3>Science</h3>
-                        <p class="card-desc">Understand how the universe behaves. From atomic interactions to the laws
-                            of motion.</p>
-                        <div class="tag-container">
-                            <span class="tag">Physics</span>
-                            <span class="tag">Biology</span>
-                            <span class="tag">Chemistry</span>
-                            <span class="tag">Reasoning</span>
-                        </div>
+                        <a href="pages/learn.html">
+                            <div class="icon-box">
+                                <span>⚛</span>
+                            </div>
+                            <h3>Science</h3>
+                            <p class="card-desc">Understand how the universe behaves. From atomic interactions to the laws
+                                of motion.</p>
+                            <div class="tag-container">
+                                <span class="tag">Physics</span>
+                                <span class="tag">Biology</span>
+                                <span class="tag">Chemistry</span>
+                                <span class="tag">Reasoning</span>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="learn-card">
-                        <div class="icon-box">
-                            <span>⚡</span>
-                        </div>
-                        <h3>Technology</h3>
-                        <p class="card-desc">Master the tools of the modern age. Computing, software systems, and
-                            digital innovation.</p>
-                        <div class="tag-container">
-                            <span class="tag">Web Dev</span>
-                            <span class="tag">AI & ML</span>
-                            <span class="tag">Data</span>
-                            <span class="tag">Cloud</span>
-                        </div>
+                        <a href="pages/learn.html">
+                            <div class="icon-box">
+                                <span>⚡</span>
+                            </div>
+                            <h3>Technology</h3>
+                            <p class="card-desc">Master the tools of the modern age. Computing, software systems, and
+                                digital innovation.</p>
+                            <div class="tag-container">
+                                <span class="tag">Web Dev</span>
+                                <span class="tag">AI & ML</span>
+                                <span class="tag">Data</span>
+                                <span class="tag">Cloud</span>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="learn-card">
-                        <div class="icon-box">
-                            <span>⚙</span>
-                        </div>
-                        <h3>Engineering</h3>
-                        <p class="card-desc">Build solutions for the real world. Apply scientific principles to design
-                            and construct.</p>
-                        <div class="tag-container">
-                            <span class="tag">Systems</span>
-                            <span class="tag">Robotics</span>
-                            <span class="tag">Electronics</span>
-                            <span class="tag">Design</span>
-                        </div>
+                        <a href="pages/learn.html">
+                            <div class="icon-box">
+                                <span>⚙</span>
+                            </div>
+                            <h3>Engineering</h3>
+                            <p class="card-desc">Build solutions for the real world. Apply scientific principles to design
+                                and construct.</p>
+                            <div class="tag-container">
+                                <span class="tag">Systems</span>
+                                <span class="tag">Robotics</span>
+                                <span class="tag">Electronics</span>
+                                <span class="tag">Design</span>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="learn-card">
-                        <div class="icon-box">
-                            <span>∑</span>
-                        </div>
-                        <h3>Mathematics</h3>
-                        <p class="card-desc">The language of the universe. Solve complex problems through patterns and
-                            abstract thought.</p>
-                        <div class="tag-container">
-                            <span class="tag">Calculus</span>
-                            <span class="tag">Algebra</span>
-                            <span class="tag">Logic</span>
-                            <span class="tag">Statistics</span>
-                        </div>
+                        <a href="pages/learn.html">
+                            <div class="icon-box">
+                                <span>∑</span>
+                            </div>
+                            <h3>Mathematics</h3>
+                            <p class="card-desc">The language of the universe. Solve complex problems through patterns and
+                                abstract thought.</p>
+                            <div class="tag-container">
+                                <span class="tag">Calculus</span>
+                                <span class="tag">Algebra</span>
+                                <span class="tag">Logic</span>
+                                <span class="tag">Statistics</span>
+                            </div>
+                        </a>
                     </div>
 
                 </div>
@@ -259,7 +275,7 @@
                     </div>
 
                     <div class="creator-action">
-                        <a href="https://github.com/shobhit115" target="_blank" class="github-btn">
+                        <a href="https://github.com/openlearny/home" target="_blank" class="github-btn">
                             <span class="gh-icon">
                                 <svg viewBox="0 0 24 24" fill="currentColor">
                                     <path
@@ -299,19 +315,19 @@
                                         d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                                 </svg>
                             </a>
-                            <a href="#" aria-label="Twitter">
+                            <a href="https://x.com/openlearny" aria-label="Twitter">
                                 <svg viewBox="0 0 24 24" fill="currentColor">
                                     <path
                                         d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
                                 </svg>
                             </a>
-                            <a href="#" aria-label="YouTube">
+                            <a href="https://www.youtube.com/@openlearny" aria-label="YouTube">
                                 <svg viewBox="0 0 24 24" fill="currentColor">
                                     <path
                                         d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" />
                                 </svg>
                             </a>
-                            <a href="#" aria-label="Instagram">
+                            <a href="https://www.instagram.com/openlearny" aria-label="Instagram">
                                 <svg viewBox="0 0 24 24" fill="currentColor">
                                     <path
                                         d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.069-4.85.069-3.204 0-3.584-.011-4.849-.069-3.229-.148-4.771-1.664-4.919-4.919-.059-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
@@ -325,7 +341,7 @@
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Learn</a></li>
-                            <li><a href="#">Roadmap</a></li>
+                            <!-- <li><a href="#">Roadmap</a></li> -->
                         </ul>
                     </div>
 
