added js and cs learning page

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -141,7 +141,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="topic-card">
+                    <a href="tech/css.html" class="topic-card">
                         <div class="topic-content">
                             <div class="topic-top">
                                 <span class="topic-icon">
@@ -159,20 +159,21 @@
                         </div>
                     </a>
 
-                    <a href="#" class="topic-card card-disabled">
+                    <a href="tech/js.html" class="topic-card">
                         <div class="topic-content">
                             <div class="topic-top">
                                 <span class="topic-icon">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
                                         alt="JavaScript Logo">
                                 </span>
-                                <span class="status-label">Coming Soon</span>
+                                <span class="status-dot status-live" title="In Progress"></span>
                             </div>
                             <h3>JavaScript</h3>
                             <p class="topic-purpose">Interactivity, logic, and dynamic content.</p>
                         </div>
                         <div class="topic-action">
-                            <span>Notify Me</span>
+                            <span>Start Learning</span>
+                            <span class="arrow">&rarr;</span>
                         </div>
                     </a>
 
@@ -187,6 +188,71 @@
                             </div>
                             <h3>React</h3>
                             <p class="topic-purpose">Build scalable, component-based user interfaces.</p>
+                        </div>
+                        <div class="topic-action">
+                            <span>Notify Me</span>
+                        </div>
+                    </a>
+                    <a href="#" class="topic-card card-disabled">
+                        <div class="topic-content">
+                            <div class="topic-top">
+                                <span class="topic-icon">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg"
+                                        alt="Node.js Logo">
+                                </span>
+                                <span class="status-label">Coming Soon</span>
+                            </div>
+                            <h3>Node.js</h3>
+                            <p class="topic-purpose">Build fast and scalable server-side applications.</p>
+                        </div>
+                        <div class="topic-action">
+                            <span>Notify Me</span>
+                        </div>
+                    </a>
+                    <a href="#" class="topic-card card-disabled">
+                        <div class="topic-content">
+                            <div class="topic-top">
+                                <span class="topic-icon">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"
+                                        alt="Express.js Logo">
+                                </span>
+                                <span class="status-label">Coming Soon</span>
+                            </div>
+                            <h3>Express.js</h3>
+                            <p class="topic-purpose">Create robust APIs and backend logic with ease.</p>
+                        </div>
+                        <div class="topic-action">
+                            <span>Notify Me</span>
+                        </div>
+                    </a>
+                    <a href="#" class="topic-card card-disabled">
+                        <div class="topic-content">
+                            <div class="topic-top">
+                                <span class="topic-icon">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg"
+                                        alt="MongoDB Logo">
+                                </span>
+                                <span class="status-label">Coming Soon</span>
+                            </div>
+                            <h3>MongoDB</h3>
+                            <p class="topic-purpose">Store and manage data using NoSQL databases.</p>
+                        </div>
+                        <div class="topic-action">
+                            <span>Notify Me</span>
+                        </div>
+                    </a>
+
+                    <a href="#" class="topic-card card-disabled">
+                        <div class="topic-content">
+                            <div class="topic-top">
+                                <span class="topic-icon">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg"
+                                        alt="SQL Logo">
+                                </span>
+                                <span class="status-label">Coming Soon</span>
+                            </div>
+                            <h3>SQL</h3>
+                            <p class="topic-purpose">Design, query, and manage relational databases.</p>
                         </div>
                         <div class="topic-action">
                             <span>Notify Me</span>
