added web-core page

--- a/pages/tech/js.html
+++ b/pages/tech/js.html
@@ -91,6 +91,7 @@
                     It allows you to respond to user actions, manipulate HTML and CSS, and build
                     full applications.
                 </p>
+                <h2>"Hello World" Program in Server Console</h2>
 
                 <div class="code-block">
                     <button class="copy-btn" aria-label="Copy code">
